--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="homepage.html">A<span>F</span></a></div>
+            <div class="logo"><a href="index.html">A<span>F</span></a></div>
             <ul class="menu" id="menu">
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="">Contact</a></li>
