--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
 <body>
     <nav class="navbar" style="background-color: #f0932b;">
         <div class="max-width">
-            <div class="logo"><a href="homepage.html">AF</a></div>
+            <div class="logo"><a href="index.html">AF</a></div>
             <ul class="menu" id="menu">
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Experiences</a></li>
                 <li><a href="">Projects</a></li>
