--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" href="images/icon-01.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <title>Airlangga Fidiyanto</title>
 </head>
@@ -14,9 +15,9 @@
             <div class="logo"><a href="">A<span>F</span></a></div>
             <ul class="menu" id="menu">
                 <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="comingsoon.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="comingsoon.html">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
