--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" href="images/icon-01.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar" style="background-color: #f0932b;">
+    <nav class="navbar" style="background-color: #0abde3;">
         <div class="max-width">
             <div class="logo"><a href="index.html">AF</a></div>
             <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Experiences</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="comingsoon.html">About</a></li>
+                <li><a href="comingsoon.html">Experiences</a></li>
+                <li><a href="comingsoon.html">Projects</a></li>
+                <li><a href="comingsoon.html">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
