--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <script src="js/navbar.js"></script>
         </div>
     </nav>
-    <section class="home" id="home" style="background: url('images/camera.jpg') no-repeat center;">
+    <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
