--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar" style="background-color: #0abde3;">
+    <nav class="navbar"">
         <div class="max-width">
             <div class="logo"><a href="index.html">AF</a></div>
             <ul class="menu" id="menu">
