major theme change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="">A<span>F</span></a></div>
+            <div class="logo"><a href="">
+                <ul>
+                    <li style="font-size: 50%;">Airlangga</li>
+                    <li style="font-size: 50%;">Fidiyanto</li>
+                </ul>
+            </a></div>
             <ul class="menu" id="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="comingsoon.html">About</a></li>
