--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,12 @@
 <body>
     <nav class="navbar"">
         <div class="max-width">
-            <div class="logo"><a href="index.html">AF</a></div>
+            <div class="logo"><a href="">
+                <ul style="list-style: none">
+                    <li style="font-size: 50%;">Airlangga</li>
+                    <li style="font-size: 50%;">Fidiyanto</li>
+                </ul>
+            </a></div>
             <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="comingsoon.html">About</a></li>
