--- a/portfolio.html
+++ b/portfolio.html
@@ -12,18 +12,18 @@
 <body>
     <nav class="navbar"">
         <div class="max-width">
-            <div class="logo"><a href="">
-                <ul style="list-style: none">
+            <div class="logo"><a href="index.html">
+                <ul>
                     <li style="font-size: 50%;">Airlangga</li>
-                    <li style="font-size: 50%;">Fidiyanto</li>
+                    <li style="font-size: 50%;">Fidiyanto<span class="cursor">&nbsp;</span></li>
                 </ul>
             </a></div>
             <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="comingsoon.html">About</a></li>
-                <li><a href="comingsoon.html">Experiences</a></li>
-                <li><a href="comingsoon.html">Projects</a></li>
-                <li><a href="comingsoon.html">Contact</a></li>
+                <li><a href="comingsoon.html">Skills</a></li>
+                <li class="right_now">Portfolio</li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -32,8 +32,8 @@
         </div>
     </nav>
     <div class="body">
-        <h1>Portfolio</h1>
-        <iframe src="https://drive.google.com/file/d/1EWANPVHYzYpfRvqQaEEaPvZo0CFEKhUi/preview" class="pdf_frame"></iframe>
+        <h1>Experiences</h1>
+        <p class="check_more"><a href="">click here to see my portfolio!</a></p>
     </div>
 </body>
 </html>
