--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="navbar_style.css">
+    <link rel="stylesheet" href="../styles/portfolio.css">
+    <link rel="stylesheet" href="../styles/contact.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="images/icon-01.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -12,30 +13,28 @@
 <body>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="index.html">A<span>F</span></a></div>
+            <div class="logo"><a href="">
+                <ul>
+                    <li style="font-size: 50%;">Airlangga</li>
+                    <li style="font-size: 50%;">Fidiyanto<span class="cursor">&nbsp;</span></li>
+                </ul>
+            </a></div>
             <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="comingsoon.html">About</a></li>
-                <li><a href="comingsoon.html">Experiences</a></li>
-                <li><a href="comingsoon.html">Projects</a></li>
-                <li><a href="comingsoon.html">Contact</a></li>
+                <li><a href="portfolio.html">Skills</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li class="right_now">Contact</li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
-            <script src="navbar.js"></script>
+            <script src="js/navbar.js"></script>
         </div>
     </nav>
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Airlangga Fidiyanto</div>
-                <div class="text-3">I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></div>
-                <script src="main.js"></script>
-            </div>
-        </div>
-    </section>
+    <div class="body">
+        <h1>Contact me</h1>
+    </div>
 
 </body>
 </html>
