--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
                 </ul>
             </a></div>
             <ul class="menu" id="menu">
-                <li><a href="">Home</a></li>
+                <li class="right_now">Home</li>
                 <li><a href="comingsoon.html">About</a></li>
+                <li><a href="comingsoon.html">Skills</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="comingsoon.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -36,10 +37,11 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Airlangga Fidiyanto</div>
                 <div class="text-3">I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></div>
-                <script src="js/main.js"></script>
+                <a href="comingsoon.html"><button class="contact">Contact me</button></a>
             </div>
         </div>
     </section>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
