--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/portfolio.css">
     <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="images/icon-01.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
