--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
             <script src="js/navbar.js"></script>
         </div>
     </nav>
+    <hr style="border-bottom: 1px solid rgba(0,0,0,0.25)">
     <div class="body">
         <h1>Contact me</h1>
     </div>
-
 </body>
 </html>
