--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/portfolio.css">
-    <link rel="stylesheet" href="../styles/contact.css">
-    <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="images/icon-01.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <title>Contact me</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar"">
         <div class="max-width">
-            <div class="logo"><a href="">
+            <div class="logo"><a href="index.html">
                 <ul>
                     <li style="font-size: 50%;">Airlangga</li>
                     <li style="font-size: 50%;">Fidiyanto<span class="cursor">&nbsp;</span></li>
@@ -23,7 +23,7 @@
             <ul class="menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="comingsoon.html">About</a></li>
-                <li><a href="portfolio.html">Skills</a></li>
+                <li><a href="comingsoon.html">Skills</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li class="right_now">Contact</li>
             </ul>
@@ -33,9 +33,41 @@
             <script src="js/navbar.js"></script>
         </div>
     </nav>
-    <hr style="border-bottom: 1px solid rgba(0,0,0,0.25)">
     <div class="body">
         <h1>Contact me</h1>
+        <div class="contact">
+            <div class="cp">
+                <div class="cp-item">
+                    <div class="icon">
+                        <i class="fa fa-linkedin-square"></i>
+                    </div>
+                    <div class="text">
+                        <span class="title">LinkedIn</span><br>
+                        <span><a href="https://www.linkedin.com/in/airlanggarasyad/">airlanggarasyad</a></span>
+                    </div>
+                </div>
+                <div class="cp-item">
+                    <div class="icon">
+                        <i class="fa fa-instagram"></i>
+                    </div>
+                    <div class="text">
+                        <span class="title">Instagram</span><br>
+                        <span><a href="https://www.instagram.com/airlanggarasyad/">airlanggarasyad</a></span>
+                    </div>
+                </div>
+                <div class="cp-item">
+                    <div class="icon">
+                        <i class="fa fa-envelope-o"></i>
+                    </div>
+                    <div class="text">
+                        <span class="title">E-mail</span><br>
+                        <span><a href="mailto:airlangga.rasyad@icloud.com">airlangga.rasyad@icloud.com</a></span>
+                    </div>
+                </div>
+            </div>
+            <div class="mail">
+            </div>
+        </div>
     </div>
 </body>
 </html>
