added github on cp

--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,15 @@
                 </div>
                 <div class="cp-item">
                     <div class="icon">
+                        <i class="fa fa-github"></i>
+                    </div>
+                    <div class="text">
+                        <span class="title">GitHub</span><br>
+                        <span><a href="https://github.com/airlanggarasyad">airlanggarasyad</a></span>
+                    </div>
+                </div>
+                <div class="cp-item">
+                    <div class="icon">
                         <i class="fa fa-instagram"></i>
                     </div>
                     <div class="text">
