update button name

--- a/apps/draw/drawing.html
+++ b/apps/draw/drawing.html
@@ -16,7 +16,7 @@
             <p>Change Stoke:</p>
             <input type="number" class="stroke" value ="3">
         </section>
-        <button class="clear">Clear Drawing</button>
+        <button class="clear">Clear Canvas</button>
         <script src="js/main.js"></script>
     </div>
 </body>
